# clinic-management-flask

./: .dockerignore  .env  .gitignore  Clinic-key.pem  Dockerfile  docker-buildx  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml
instance/: clinic.db
migrations/: env.py
migrations/versions/: 099fcdd410c7_complete_dynamic_time_split_slot_tokens_.py  2a040ff7a281_add_insurance_and_reimbursement_tables.py  4b6c2d3e9587_add_bio_to_doctor_profile.py  649c535989e1_added_is_approved_to_doctor_profile.py  6cde85fd4e92_remove_venue_model_and_add_venue_address.py  73e65235c023_create_all_tables.py  97af2d7e7ff1_added_appointments_venues_slots_and_.py  a4a81b59b9e6_initial_clinic_setup.py  b06daf682521_add_medical_records_and_claims_workflows.py  dcbf00949554_add_test_deployment_table.py
src/: app.py  config.py
src/admin/: models.py  repositories.py  routes.py  schemas.py  services.py
src/appointments/: models.py  repositories.py  routes.py  schemas.py  services.py
src/auth/: models.py  repositories.py  routes.py  schemas.py  services.py
src/common/utils/: decorators.py  ld_client.py
src/doctor/: models.py  repositories.py  routes.py  schemas.py  services.py
src/instance/: clinic.db
src/member/: repositories.py  routes.py  schemas.py  services.py
src/reimbursement/: models.py  repositories.py  routes.py  schemas.py  services.py
