[project]
name = "clinic-management"
version = "0.1.0"
description = ""
authors = [
    {name = "Mohammad Faisal"}
]
requires-python = ">=3.10,<4.0"
dependencies = [
    "flask (>=3.1.3,<4.0.0)",
    "flask-migrate (>=4.1.0,<5.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "flask-jwt-extended (>=4.7.4,<5.0.0)",
    "marshmallow (>=4.3.0,<5.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "ldclient-py (>=6.9.1,<7.0.0)",
    "psycopg[binary] (>=3.3.4,<4.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "black (>=26.5.1,<27.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=2.1.0,<3.0.0)"
]

